--- a/index (1).html
+++ b/index (1).html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ИП Зоткин — Ассенизатор</title>
-  <link rel="stylesheet" href="style (1).css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="hero">
