--- a/about.html
+++ b/about.html
@@ -7,10 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header"><div class="container"><h1>О компании</h1></div></header>
-  <section class="intro"><div class="container">
-    <p>Более 10 лет на рынке. Работаем официально. Все расчёты прозрачны. Используем современное оборудование и квалифицированный персонал.</p>
-  </div></section>
+  <header class="header">
+    <div class="container">
+      <h1><a href="index.html" style="text-decoration: none; color: #004aad;">Золотарь 58</a></h1>
+    </div>
+  </header>
+  <section class="intro">
+    <div class="container">
+      <p>Более 10 лет на рынке. Работаем официально. Все расчёты прозрачны. Используем современное оборудование и квалифицированный персонал.</p>
+    </div>
+  </section>
   <footer><div class="container"><p>© 2025 Золотарь 58</p></div></footer>
 </body>
 </html>
