--- a/contacts.html
+++ b/contacts.html
@@ -7,14 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header"><div class="container"><h1>Контакты</h1></div></header>
-  <section class="intro"><div class="container">
-    <p>Телефон: +7 (999) 999-99-99</p>
-    <p>Email: zotkin@example.com</p>
-    <p>Telegram: @zolotar58</p>
-    <p>WhatsApp: wa.me/79999999999</p>
-    <p>Работаем по Пензе и области</p>
-  </div></section>
+  <header class="header">
+    <div class="container">
+      <h1><a href="index.html" style="text-decoration: none; color: #004aad;">Золотарь 58</a></h1>
+    </div>
+  </header>
+  <section class="intro">
+    <div class="container">
+      <p>Телефон: +7 (999) 999-99-99</p>
+      <p>Email: zotkin@example.com</p>
+      <p>Telegram: @zolotar58</p>
+      <p>WhatsApp: wa.me/79999999999</p>
+      <p>Работаем по Пензе и области</p>
+    </div>
+  </section>
   <footer><div class="container"><p>© 2025 Золотарь 58</p></div></footer>
 </body>
 </html>
