--- a/services.html
+++ b/services.html
@@ -7,17 +7,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header"><div class="container"><h1>Услуги</h1></div></header>
-  <section class="intro"><div class="container">
-    <ul>
-      <li>Аварийная прочистка канализации</li>
-      <li>Гидродинамическая прочистка</li>
-      <li>Откачка выгребных ям до 12 м³</li>
-      <li>Илосос</li>
-      <li>Видеоинспекция и поиск колодцев</li>
-      <li>Заключение договоров</li>
-    </ul>
-  </div></section>
+  <header class="header">
+    <div class="container">
+      <h1><a href="index.html" style="text-decoration: none; color: #004aad;">Золотарь 58</a></h1>
+    </div>
+  </header>
+  <section class="intro">
+    <div class="container">
+      <ul>
+        <li>Аварийная прочистка канализации</li>
+        <li>Гидродинамическая прочистка</li>
+        <li>Откачка выгребных ям до 12 м³</li>
+        <li>Илосос</li>
+        <li>Видеоинспекция и поиск колодцев</li>
+        <li>Заключение договоров</li>
+      </ul>
+    </div>
+  </section>
   <footer><div class="container"><p>© 2025 Золотарь 58</p></div></footer>
 </body>
 </html>
