--- a/index.html
+++ b/index.html
@@ -8,44 +8,21 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1><a href="#">Золотарь 58</a></h1>
-      <p>Профессиональная откачка и прочистка канализации</p>
+      <h1><a href="index.html"><img src="logo.png" style="height:40px; vertical-align:middle;"> Золотарь 58</a></h1>
+      <nav>
+        <a href="services.html">Услуги</a>
+        <a href="about.html">О нас</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
     </div>
   </header>
-
-  <section class="hero-section">
+  <section class="main">
     <div class="container">
-      <h1 style="font-size:48px; color:#004aad; margin-bottom:20px;">ОТКАЧКА КАНАЛИЗАЦИИ 24/7</h1>
-      <h2>Мощный подход. Современная техника. Работаем 24/7.</h2>
-      <p>Быстро реагируем. Работаем с физ. и юр. лицами. Пенза и область.</p>
-      <a href="#form" class="cta">Вызвать специалиста</a>
+      <h2>Откачка и прочистка канализации 24/7</h2>
+      <p>Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
+      <a class="cta" href="contacts.html">Вызвать специалиста</a>
     </div>
   </section>
-
-  <section class="advantages-section">
-    <div class="container">
-      <h2>Почему выбирают нас</h2>
-      <div class="advantage-grid">
-        <div class="adv-card"><h3>Работаем 24/7</h3><p>Быстрая реакция в любое время суток.</p></div>
-        <div class="adv-card"><h3>Современная техника</h3><p>Используем профессиональное оборудование.</p></div>
-        <div class="adv-card"><h3>Юр. и физ. лица</h3><p>Обслуживаем дома, офисы, предприятия.</p></div>
-        <div class="adv-card"><h3>Опыт более 10 лет</h3><p>Проверенная репутация в Пензе и области.</p></div>
-      </div>
-    </div>
-  </section>
-
-  <section class="form-section" id="form">
-    <div class="container">
-      <h2>Оставить заявку</h2>
-      <form action="mailto:zotkin@example.com" method="post" enctype="text/plain">
-        <input type="text" name="name" placeholder="Ваше имя" required><br>
-        <input type="tel" name="phone" placeholder="Телефон для связи" required><br>
-        <textarea name="message" placeholder="Комментарий или адрес" rows="4"></textarea><br>
-        <button type="submit">Отправить</button>
-      </form>
-    </div>
-  </section>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
