--- a/services.html
+++ b/services.html
@@ -1,1 +1,46 @@
-/mnt/data/zolotar58-final-ready/services.html
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Золотарь 58</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="header">
+    <div class="container">
+      <h1><a href="index.html"><img src="logo.png" style="height:40px; vertical-align:middle;"> Золотарь 58</a></h1>
+      <nav>
+        <a href="services.html">Услуги</a>
+        <a href="about.html">О нас</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+    </div>
+  </header>
+  <section class="main">
+    <div class="container">
+      <h2>Откачка и прочистка канализации 24/7</h2>
+      <p>Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
+      <a class="cta" href="contacts.html">Вызвать специалиста</a>
+    </div>
+  </section>
+
+  <section class="main">
+    <div class="container">
+      <h2>Почему выбирают нас</h2>
+      <ul>
+        <li>Аварийный выезд 24/7</li>
+        <li>Гидродинамическая и механическая прочистка</li>
+        <li>Откачка септиков, ям, биотуалетов, колодцев</li>
+        <li>Видеоинспекция и поиск скрытых колодцев</li>
+        <li>Работаем с юр. и физ. лицами, нал/безнал</li>
+      </ul>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+    </div>
+  </footer>
+</body>
+</html>
