--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58</title>
+  <title>Услуги — Золотарь 58</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,23 +16,18 @@
       </nav>
     </div>
   </header>
-  <section class="main">
-    <div class="container">
-      <h2>Откачка и прочистка канализации 24/7</h2>
-      <p>Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
-      <a class="cta" href="contacts.html">Вызвать специалиста</a>
-    </div>
-  </section>
 
   <section class="main">
     <div class="container">
-      <h2>Почему выбирают нас</h2>
+      <h2>Наши услуги</h2>
       <ul>
-        <li>Аварийный выезд 24/7</li>
-        <li>Гидродинамическая и механическая прочистка</li>
-        <li>Откачка септиков, ям, биотуалетов, колодцев</li>
-        <li>Видеоинспекция и поиск скрытых колодцев</li>
-        <li>Работаем с юр. и физ. лицами, нал/безнал</li>
+        <li>Аварийная прочистка канализации</li>
+        <li>Гидродинамическая и механическая прочистка труб</li>
+        <li>Откачка выгребных ям до 12 м³</li>
+        <li>Откачка септиков, биотуалетов, ила из колодцев</li>
+        <li>Илосос, видеоинспекция, поиск колодцев</li>
+        <li>Заключение договоров на обслуживание</li>
+        <li>Работаем с нал/безнал, 24/7, без выходных</li>
       </ul>
     </div>
   </section>
