--- a/about.html
+++ b/about.html
@@ -1,1 +1,34 @@
-/mnt/data/zolotar58-final-ready/about.html
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>О компании — Золотарь 58</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="header">
+    <div class="container">
+      <h1><a href="index.html"><img src="logo.png" style="height:40px; vertical-align:middle;"> Золотарь 58</a></h1>
+      <nav>
+        <a href="services.html">Услуги</a>
+        <a href="about.html">О нас</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+    </div>
+  </header>
+
+  <section class="main">
+    <div class="container">
+      <h2>О компании</h2>
+      <p>ИП Зоткин А.И. оказывает услуги по откачке и прочистке канализации более 10 лет. Мы работаем по Пензе и области, быстро реагируем на заявки, используем современное оборудование и гарантируем качество.</p>
+      <p>Обслуживаем частные дома, организации, коммерческие и муниципальные объекты. Принимаем как наличный, так и безналичный расчёт. Работаем без выходных, 24/7.</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+    </div>
+  </footer>
+</body>
+</html>
