--- a/services.html
+++ b/services.html
@@ -2,13 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Услуги — Золотарь 58</title>
+  <title>Золотарь 58 — Откачка и прочистка канализации 24/7</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="Профессиональная откачка и прочистка канализации. Аварийный выезд 24/7. Пенза и область. Современное оборудование, гарантия качества.">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png" type="image/png">
 </head>
 <body>
   <header class="header">
-    <div class="container">
-      <h1><a href="index.html"><img src="logo.png" style="height:40px; vertical-align:middle;"> Золотарь 58</a></h1>
+    <div class="container header-row">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" alt="Логотип Золотарь 58" class="logo">
+        <span class="brand-name">Золотарь 58</span>
+      </a>
       <nav>
         <a href="services.html">Услуги</a>
         <a href="about.html">О нас</a>
@@ -17,24 +23,63 @@
     </div>
   </header>
 
-  <section class="main">
+  <section class="hero">
+    <div class="container hero-content">
+      <h1>Откачка и прочистка канализации <span class="blue-strong">24/7</span></h1>
+      <p class="lead">Пенза и область. Современное оборудование, аварийный выезд, без выходных.<br>Гарантия качества, честные цены, работаем с юр. и физ. лицами.</p>
+      <a class="cta big" href="contacts.html#form">Вызвать специалиста</a>
+      <div class="usps">
+        <div>
+          <span class="usp-icon">🚚</span>
+          <span>Аварийный выезд</span>
+        </div>
+        <div>
+          <span class="usp-icon">🧰</span>
+          <span>Современная техника</span>
+        </div>
+        <div>
+          <span class="usp-icon">📞</span>
+          <span>Быстрый ответ</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="why-us">
     <div class="container">
-      <h2>Наши услуги</h2>
-      <ul>
-        <li>Аварийная прочистка канализации</li>
-        <li>Гидродинамическая и механическая прочистка труб</li>
-        <li>Откачка выгребных ям до 12 м³</li>
-        <li>Откачка септиков, биотуалетов, ила из колодцев</li>
-        <li>Илосос, видеоинспекция, поиск колодцев</li>
-        <li>Заключение договоров на обслуживание</li>
-        <li>Работаем с нал/безнал, 24/7, без выходных</li>
-      </ul>
+      <h2>Почему выбирают нас</h2>
+      <div class="features">
+        <div class="feature-card">
+          <span class="feat-icon">🔧</span>
+          <h3>Широкий спектр услуг</h3>
+          <p>Прочистка канализации, откачка септиков, выгребных ям, илосос, видеоинспекция, поиск колодцев.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feat-icon">⏱️</span>
+          <h3>Работаем 24/7</h3>
+          <p>Аварийный выезд в любое время. Оперативная помощь в Пензе и области.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feat-icon">💳</span>
+          <h3>Удобная оплата</h3>
+          <p>Наличный и безналичный расчёт. Заключаем договоры на обслуживание.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feat-icon">✅</span>
+          <h3>Гарантия качества</h3>
+          <p>Современное оборудование. Опыт более 10 лет. Работаем с частниками и организациями.</p>
+        </div>
+      </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+      <div class="footer-flex">
+        <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
+        <span><a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a></span>
+        <span>Пенза и область</span>
+      </div>
     </div>
   </footer>
 </body>
