--- a/about.html
+++ b/about.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
-    <div class="container">
-      <h1><a href="index.html"><img src="logo.png" style="height:40px; vertical-align:middle;"> Золотарь 58</a></h1>
+    <div class="container header-row">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" alt="Логотип Золотарь 58" class="logo">
+        <span class="brand-name">Золотарь 58</span>
+      </a>
       <nav>
         <a href="services.html">Услуги</a>
         <a href="about.html">О нас</a>
@@ -19,15 +23,25 @@
 
   <section class="main">
     <div class="container">
-      <h2>О компании</h2>
-      <p>ИП Зоткин А.И. оказывает услуги по откачке и прочистке канализации более 10 лет. Мы работаем по Пензе и области, быстро реагируем на заявки, используем современное оборудование и гарантируем качество.</p>
-      <p>Обслуживаем частные дома, организации, коммерческие и муниципальные объекты. Принимаем как наличный, так и безналичный расчёт. Работаем без выходных, 24/7.</p>
+      <h1>О компании</h1>
+      <p><b>Золотарь 58</b> — это профессиональная команда с опытом более 10 лет. Мы помогаем людям и бизнесу решать вопросы с канализацией быстро, чисто и с гарантией результата.</p>
+      <ul>
+        <li>Современная техника и оборудование</li>
+        <li>Опытные специалисты</li>
+        <li>Работаем по всей Пензенской области</li>
+        <li>Выполняем сложные и нестандартные задачи</li>
+        <li>Нам доверяют более 500 клиентов</li>
+      </ul>
+      <p>Мы дорожим своей репутацией, поэтому подходим к каждому заказу ответственно и честно. Для нас важно ваше спокойствие и комфорт!</p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+      <div class="footer-flex">
+        <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
+        <span><a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a></span>
+      </div>
     </div>
   </footer>
 </body>
