--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Откачка и прочистка канализации 24/7</title>
+  <title>Золотарь 58 — Ассенизатор в Пензе</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Профессиональная откачка и прочистка канализации. Аварийный выезд 24/7. Пенза и область. Современное оборудование, гарантия качества.">
+  <meta name="description" content="Ассенизаторские услуги, откачка, прочистка и видеоинспекция канализации. Пенза и область. Звоните +7 902 207-36-36">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="logo.png" type="image/png">
 </head>
@@ -17,7 +17,7 @@
       </a>
       <nav>
         <a href="services.html">Услуги</a>
-        <a href="about.html">О нас</a>
+        <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -25,22 +25,42 @@
 
   <section class="hero">
     <div class="container hero-content">
-      <h1>Откачка и прочистка канализации <span class="blue-strong">24/7</span></h1>
-      <p class="lead">Пенза и область. Современное оборудование, аварийный выезд, без выходных.<br>Гарантия качества, честные цены, работаем с юр. и физ. лицами.</p>
+      <h1>Ассенизаторские услуги 24/7 в Пензе</h1>
+      <p class="lead">
+        Откачка и прочистка канализации, септиков, ям. Видеоинспекция труб. Оперативный выезд, современные технологии, договоры для организаций.<br> Звоните: <a href="tel:+79022073636">+7 (902) 207-36-36</a>
+      </p>
       <a class="cta big" href="contacts.html#form">Вызвать специалиста</a>
       <div class="usps">
         <div>
-          <span class="usp-icon">🚚</span>
-          <span>Аварийный выезд</span>
-        </div>
-        <div>
-          <span class="usp-icon">🧰</span>
-          <span>Современная техника</span>
-        </div>
-        <div>
           <span class="usp-icon">📞</span>
-          <span>Быстрый ответ</span>
+          <span>Работаем 24/7</span>
         </div>
+        <div>
+          <span class="usp-icon">💧</span>
+          <span>Современное оборудование</span>
+        </div>
+        <div>
+          <span class="usp-icon">📝</span>
+          <span>Договоры для юр. лиц</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="work-examples">
+    <h2>Примеры работ</h2>
+    <div class="examples-grid">
+      <div>
+        <img src="photo_2025-05-31_22-06-32.jpg" alt="До/после прочистки">
+        <p>Труба до и после гидродинамической прочистки</p>
+      </div>
+      <div>
+        <img src="photo_2025-05-31_22-06-29.jpg" alt="Схема работы">
+        <p>Схема гидродинамической очистки</p>
+      </div>
+      <div>
+        <img src="photo_2025-05-31_22-06-25.jpg" alt="Оборудование">
+        <p>Современное оборудование</p>
       </div>
     </div>
   </section>
@@ -50,24 +70,24 @@
       <h2>Почему выбирают нас</h2>
       <div class="features">
         <div class="feature-card">
-          <span class="feat-icon">🔧</span>
-          <h3>Широкий спектр услуг</h3>
-          <p>Прочистка канализации, откачка септиков, выгребных ям, илосос, видеоинспекция, поиск колодцев.</p>
-        </div>
-        <div class="feature-card">
           <span class="feat-icon">⏱️</span>
-          <h3>Работаем 24/7</h3>
-          <p>Аварийный выезд в любое время. Оперативная помощь в Пензе и области.</p>
+          <h3>Быстрый выезд 24/7</h3>
+          <p>Приедем быстро в любую точку Пензы и области, даже ночью и в выходные.</p>
         </div>
         <div class="feature-card">
-          <span class="feat-icon">💳</span>
-          <h3>Удобная оплата</h3>
-          <p>Наличный и безналичный расчёт. Заключаем договоры на обслуживание.</p>
+          <span class="feat-icon">🛠️</span>
+          <h3>Любая сложность</h3>
+          <p>Работаем с частниками и организациями, сложные случаи — наш профиль.</p>
         </div>
         <div class="feature-card">
-          <span class="feat-icon">✅</span>
-          <h3>Гарантия качества</h3>
-          <p>Современное оборудование. Опыт более 10 лет. Работаем с частниками и организациями.</p>
+          <span class="feat-icon">🤝</span>
+          <h3>Договоры для организаций</h3>
+          <p>Заключаем договора на регулярное обслуживание, предоставляем отчётность.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feat-icon">🔍</span>
+          <h3>Гарантия результата</h3>
+          <p>Очищаем тщательно, после нас не бывает повторных засоров. Даем советы по эксплуатации.</p>
         </div>
       </div>
     </div>
@@ -77,7 +97,7 @@
     <div class="container">
       <div class="footer-flex">
         <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a></span>
+        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
         <span>Пенза и область</span>
       </div>
     </div>
