--- a/services.html
+++ b/services.html
@@ -2,11 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Откачка и прочистка канализации 24/7</title>
+  <title>Услуги — Золотарь 58</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Профессиональная откачка и прочистка канализации. Аварийный выезд 24/7. Пенза и область. Современное оборудование, гарантия качества.">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="logo.png" type="image/png">
 </head>
 <body>
   <header class="header">
@@ -17,59 +15,46 @@
       </a>
       <nav>
         <a href="services.html">Услуги</a>
-        <a href="about.html">О нас</a>
+        <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="container hero-content">
-      <h1>Откачка и прочистка канализации <span class="blue-strong">24/7</span></h1>
-      <p class="lead">Пенза и область. Современное оборудование, аварийный выезд, без выходных.<br>Гарантия качества, честные цены, работаем с юр. и физ. лицами.</p>
-      <a class="cta big" href="contacts.html#form">Вызвать специалиста</a>
-      <div class="usps">
-        <div>
-          <span class="usp-icon">🚚</span>
-          <span>Аварийный выезд</span>
-        </div>
-        <div>
-          <span class="usp-icon">🧰</span>
-          <span>Современная техника</span>
-        </div>
-        <div>
-          <span class="usp-icon">📞</span>
-          <span>Быстрый ответ</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="why-us">
+  <section class="main">
     <div class="container">
-      <h2>Почему выбирают нас</h2>
-      <div class="features">
-        <div class="feature-card">
-          <span class="feat-icon">🔧</span>
-          <h3>Широкий спектр услуг</h3>
-          <p>Прочистка канализации, откачка септиков, выгребных ям, илосос, видеоинспекция, поиск колодцев.</p>
+      <h1>Перечень услуг</h1>
+      <div class="service-list">
+        <div class="service-item">
+          <h3>Аварийная прочистка канализации</h3>
+          <p>Быстрая и эффективная помощь при засорах любого типа. Осуществляем как механическую, так и гидродинамическую прочистку труб — современное оборудование, опытные мастера.</p>
         </div>
-        <div class="feature-card">
-          <span class="feat-icon">⏱️</span>
-          <h3>Работаем 24/7</h3>
-          <p>Аварийный выезд в любое время. Оперативная помощь в Пензе и области.</p>
+        <div class="service-item">
+          <h3>Гидродинамическая прочистка</h3>
+          <p>Сильная струя воды под давлением очищает трубы от любых загрязнений — удаляет жир, налёт, ржавчину, засоры. Безопасна для любых материалов, идеальна для профилактики.</p>
         </div>
-        <div class="feature-card">
-          <span class="feat-icon">💳</span>
-          <h3>Удобная оплата</h3>
-          <p>Наличный и безналичный расчёт. Заключаем договоры на обслуживание.</p>
+        <div class="service-item">
+          <h3>Механическая прочистка</h3>
+          <p>Для самых сложных засоров и старых систем используем специальный трос и оборудование. Восстанавливаем проходимость, даём рекомендации по эксплуатации.</p>
         </div>
-        <div class="feature-card">
-          <span class="feat-icon">✅</span>
-          <h3>Гарантия качества</h3>
-          <p>Современное оборудование. Опыт более 10 лет. Работаем с частниками и организациями.</p>
+        <div class="service-item">
+          <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
+          <p>Объем до 12 м³ за выезд. Илосос, удаление ила, санитарная обработка. Быстро, аккуратно, по ГОСТу. Работаем с организациями и частными клиентами.</p>
+        </div>
+        <div class="service-item">
+          <h3>Видеоинспекция канализации</h3>
+          <p>Современное оборудование для диагностики состояния труб. Находим скрытые дефекты и предотвращаем аварии. Делаем фото и видео отчёт.</p>
+        </div>
+        <div class="service-item">
+          <h3>Поиск потерянных и скрытых колодцев</h3>
+          <p>Быстро находим и выявляем скрытые элементы канализации для обслуживания и ремонта.</p>
+        </div>
+        <div class="service-item">
+          <h3>Обслуживание по договору</h3>
+          <p>Постоянное сервисное обслуживание для юридических лиц и организаций. Индивидуальные условия и отчетные документы.</p>
         </div>
       </div>
+      <a href="contacts.html#form" class="cta">Оставить заявку</a>
     </div>
   </section>
 
@@ -77,8 +62,7 @@
     <div class="container">
       <div class="footer-flex">
         <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a></span>
-        <span>Пенза и область</span>
+        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
       </div>
     </div>
   </footer>
