--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       </a>
       <nav>
         <a href="services.html">Услуги</a>
-        <a href="about.html">О нас</a>
+        <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -24,15 +24,26 @@
   <section class="main">
     <div class="container">
       <h1>О компании</h1>
-      <p><b>Золотарь 58</b> — это профессиональная команда с опытом более 10 лет. Мы помогаем людям и бизнесу решать вопросы с канализацией быстро, чисто и с гарантией результата.</p>
-      <ul>
-        <li>Современная техника и оборудование</li>
-        <li>Опытные специалисты</li>
-        <li>Работаем по всей Пензенской области</li>
-        <li>Выполняем сложные и нестандартные задачи</li>
-        <li>Нам доверяют более 500 клиентов</li>
-      </ul>
-      <p>Мы дорожим своей репутацией, поэтому подходим к каждому заказу ответственно и честно. Для нас важно ваше спокойствие и комфорт!</p>
+      <p>
+        <b>Золотарь 58</b> — профессиональные ассенизаторские услуги по Пензе и области.<br>
+        <b>Александр Зоткин</b> — опыт более 10 лет, современное оборудование, гарантия результата.<br><br>
+        <b>Преимущества:</b>
+        <ul>
+          <li>Круглосуточно 24/7, без выходных</li>
+          <li>Оперативный выезд по Пензе и району</li>
+          <li>Индивидуальный подход к каждому клиенту</li>
+          <li>Заключаем договора на обслуживание с организациями</li>
+          <li>Наличный и безналичный расчёт</li>
+          <li>Опыт и качество, подтвержденные отзывами</li>
+        </ul>
+      </p>
+      <p>
+        <b>Наш девиз:</b> Надёжно, быстро, чисто. <br>
+        Все работы выполняются лично, без посредников — работаем на результат и с гарантией.
+      </p>
+      <p>
+        <img src="logo.png" alt="Александр Зоткин" style="max-width:120px;border-radius:50%;margin-top:12px;">
+      </p>
     </div>
   </section>
 
@@ -40,7 +51,7 @@
     <div class="container">
       <div class="footer-flex">
         <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a></span>
+        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
       </div>
     </div>
   </footer>
