--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
       </a>
       <nav>
         <a href="services.html">Услуги</a>
-        <a href="about.html">О нас</a>
+        <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -27,17 +27,17 @@
       <div class="contacts-flex">
         <div>
           <b>Телефон:</b><br>
-          <a href="tel:+79991234567">+7 (999) 123-45-67</a><br>
+          <a href="tel:+79022073636">+7 (902) 207-36-36</a><br>
           <b>Email:</b><br>
-          <a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a><br>
+          <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a><br>
           <b>Время работы:</b><br>
           Круглосуточно, без выходных<br>
           <b>Адрес:</b><br>
           Пенза и область
         </div>
         <div>
-          <h3>Оставить заявку</h3>
-          <form id="form" action="mailto:zakaz@zolotar58.ru" method="post" enctype="text/plain">
+          <h3 id="form">Оставить заявку</h3>
+          <form action="mailto:zolotar85@list.ru" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Ваше имя" required>
             <input type="tel" name="phone" placeholder="Телефон для связи" required>
             <textarea name="message" placeholder="Комментарий или адрес" rows="3"></textarea>
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="footer-flex">
         <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zakaz@zolotar58.ru">zakaz@zolotar58.ru</a></span>
+        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
       </div>
     </div>
   </footer>
