--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Ассенизатор в Пензе</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Ассенизаторские услуги, откачка, прочистка и видеоинспекция канализации. Пенза и область. Звоните +7 902 207-36-36">
+  <title>Золотарь 58 — Ассенизаторские услуги Пенза</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="logo.png" type="image/png">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
-    <div class="container header-row">
+    <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" alt="Логотип Золотарь 58" class="logo">
-        <span class="brand-name">Золотарь 58</span>
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav>
+      <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
@@ -23,83 +22,45 @@
     </div>
   </header>
 
-  <section class="hero">
-    <div class="container hero-content">
-      <h1>Ассенизаторские услуги 24/7 в Пензе</h1>
-      <p class="lead">
-        Откачка и прочистка канализации, септиков, ям. Видеоинспекция труб. Оперативный выезд, современные технологии, договоры для организаций.<br> Звоните: <a href="tel:+79022073636">+7 (902) 207-36-36</a>
-      </p>
-      <a class="cta big" href="contacts.html#form">Вызвать специалиста</a>
-      <div class="usps">
-        <div>
-          <span class="usp-icon">📞</span>
-          <span>Работаем 24/7</span>
-        </div>
-        <div>
-          <span class="usp-icon">💧</span>
-          <span>Современное оборудование</span>
-        </div>
-        <div>
-          <span class="usp-icon">📝</span>
-          <span>Договоры для юр. лиц</span>
-        </div>
-      </div>
-    </div>
-  </section>
+  <main>
+    <section class="main-intro">
+      <h1>Откачка и прочистка канализации 24/7</h1>
+      <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физ. и юр. лиц.</p>
+      <a class="cta" href="contacts.html">Оставить заявку</a>
+    </section>
 
-  <section class="work-examples">
-    <h2>Примеры работ</h2>
-    <div class="examples-grid">
-      <div>
-        <img src="photo_2025-05-31_22-06-32.jpg" alt="До/после прочистки">
-        <p>Труба до и после гидродинамической прочистки</p>
-      </div>
-      <div>
-        <img src="photo_2025-05-31_22-06-29.jpg" alt="Схема работы">
-        <p>Схема гидродинамической очистки</p>
-      </div>
-      <div>
-        <img src="photo_2025-05-31_22-06-25.jpg" alt="Оборудование">
-        <p>Современное оборудование</p>
-      </div>
-    </div>
-  </section>
+    <section class="usps">
+      <div><span class="usp-icon">📞</span> Работаем 24/7</div>
+      <div><span class="usp-icon">💧</span> Современное оборудование</div>
+      <div><span class="usp-icon">📄</span> Договоры для юр. лиц</div>
+    </section>
 
-  <section class="why-us">
-    <div class="container">
-      <h2>Почему выбирают нас</h2>
-      <div class="features">
-        <div class="feature-card">
-          <span class="feat-icon">⏱️</span>
-          <h3>Быстрый выезд 24/7</h3>
-          <p>Приедем быстро в любую точку Пензы и области, даже ночью и в выходные.</p>
+    <section class="gallery">
+      <h2>Примеры работ</h2>
+      <div class="gallery-list">
+        <div class="gallery-item">
+          <img src="example1.jpg" alt="Пример работы 1" class="gallery-placeholder">
+          <span>Фото появится позже</span>
         </div>
-        <div class="feature-card">
-          <span class="feat-icon">🛠️</span>
-          <h3>Любая сложность</h3>
-          <p>Работаем с частниками и организациями, сложные случаи — наш профиль.</p>
+        <div class="gallery-item">
+          <img src="example2.jpg" alt="Пример работы 2" class="gallery-placeholder">
+          <span>Фото появится позже</span>
         </div>
-        <div class="feature-card">
-          <span class="feat-icon">🤝</span>
-          <h3>Договоры для организаций</h3>
-          <p>Заключаем договора на регулярное обслуживание, предоставляем отчётность.</p>
+        <div class="gallery-item">
+          <img src="example3.jpg" alt="Пример работы 3" class="gallery-placeholder">
+          <span>Фото появится позже</span>
         </div>
-        <div class="feature-card">
-          <span class="feat-icon">🔍</span>
-          <h3>Гарантия результата</h3>
-          <p>Очищаем тщательно, после нас не бывает повторных засоров. Даем советы по эксплуатации.</p>
+        <div class="gallery-item">
+          <img src="example4.jpg" alt="Пример работы 4" class="gallery-placeholder">
+          <span>Фото появится позже</span>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <div class="container">
-      <div class="footer-flex">
-        <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
-        <span>Пенза и область</span>
-      </div>
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
 </body>
