--- a/about.html
+++ b/about.html
@@ -3,56 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
-    <div class="container header-row">
+    <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" alt="Логотип Золотарь 58" class="logo">
-        <span class="brand-name">Золотарь 58</span>
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav>
+      <nav class="nav">
         <a href="services.html">Услуги</a>
-        <a href="about.html">О компании</a>
+        <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
   </header>
 
-  <section class="main">
-    <div class="container">
-      <h1>О компании</h1>
-      <p>
-        <b>Золотарь 58</b> — профессиональные ассенизаторские услуги по Пензе и области.<br>
-        <b>Александр Зоткин</b> — опыт более 10 лет, современное оборудование, гарантия результата.<br><br>
-        <b>Преимущества:</b>
-        <ul>
-          <li>Круглосуточно 24/7, без выходных</li>
-          <li>Оперативный выезд по Пензе и району</li>
-          <li>Индивидуальный подход к каждому клиенту</li>
-          <li>Заключаем договора на обслуживание с организациями</li>
-          <li>Наличный и безналичный расчёт</li>
-          <li>Опыт и качество, подтвержденные отзывами</li>
-        </ul>
-      </p>
-      <p>
-        <b>Наш девиз:</b> Надёжно, быстро, чисто. <br>
-        Все работы выполняются лично, без посредников — работаем на результат и с гарантией.
-      </p>
-      <p>
-        <img src="logo.png" alt="Александр Зоткин" style="max-width:120px;border-radius:50%;margin-top:12px;">
-      </p>
-    </div>
-  </section>
+  <main>
+    <section class="main-intro" style="margin-top:40px;">
+      <h1>О компании «Золотарь 58»</h1>
+      <p class="main-subtitle" style="margin-bottom:34px;">Ассенизаторские услуги, прочистка и откачка канализации в Пензе и области — качественно и без выходных.</p>
+      <div class="about-text">
+        <p>
+          «Золотарь 58» — это современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Мы работаем как с частными клиентами, так и с юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
+          В нашем распоряжении — современное гидродинамическое и механическое оборудование, позволяющее эффективно устранять любые засоры, проводить видеоинспекцию труб и выполнять полный спектр работ по обслуживанию канализационных систем.<br><br>
+          Наши преимущества:<br>
+          — Круглосуточный аварийный выезд и оперативное реагирование;<br>
+          — Гарантия качества и честные цены;<br>
+          — Опытные сотрудники с допуском и необходимой квалификацией;<br>
+          — Безопасные технологии, щадящие любые виды труб;<br>
+          — Возможность оплаты наличными и по безналу;<br>
+          — Удобный сервис: заявку можно оставить прямо на сайте.<br><br>
+          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы наши клиенты всегда были довольны результатом. Оставляйте заявку — мы быстро приедем и решим любую задачу!
+        </p>
+      </div>
+    </section>
+  </main>
 
   <footer>
     <div class="container">
-      <div class="footer-flex">
-        <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
-      </div>
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
 </body>
