--- a/services.html
+++ b/services.html
@@ -3,67 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <title>Услуги — Золотарь 58</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
-    <div class="container header-row">
+    <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" alt="Логотип Золотарь 58" class="logo">
-        <span class="brand-name">Золотарь 58</span>
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav>
-        <a href="services.html">Услуги</a>
+      <nav class="nav">
+        <a href="services.html" style="color:#2478e2; font-weight:700;">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
   </header>
 
-  <section class="main">
-    <div class="container">
-      <h1>Перечень услуг</h1>
-      <div class="service-list">
-        <div class="service-item">
-          <h3>Аварийная прочистка канализации</h3>
-          <p>Быстрая и эффективная помощь при засорах любого типа. Осуществляем как механическую, так и гидродинамическую прочистку труб — современное оборудование, опытные мастера.</p>
-        </div>
-        <div class="service-item">
-          <h3>Гидродинамическая прочистка</h3>
-          <p>Сильная струя воды под давлением очищает трубы от любых загрязнений — удаляет жир, налёт, ржавчину, засоры. Безопасна для любых материалов, идеальна для профилактики.</p>
-        </div>
-        <div class="service-item">
-          <h3>Механическая прочистка</h3>
-          <p>Для самых сложных засоров и старых систем используем специальный трос и оборудование. Восстанавливаем проходимость, даём рекомендации по эксплуатации.</p>
-        </div>
-        <div class="service-item">
-          <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
-          <p>Объем до 12 м³ за выезд. Илосос, удаление ила, санитарная обработка. Быстро, аккуратно, по ГОСТу. Работаем с организациями и частными клиентами.</p>
-        </div>
-        <div class="service-item">
-          <h3>Видеоинспекция канализации</h3>
-          <p>Современное оборудование для диагностики состояния труб. Находим скрытые дефекты и предотвращаем аварии. Делаем фото и видео отчёт.</p>
-        </div>
-        <div class="service-item">
-          <h3>Поиск потерянных и скрытых колодцев</h3>
-          <p>Быстро находим и выявляем скрытые элементы канализации для обслуживания и ремонта.</p>
-        </div>
-        <div class="service-item">
-          <h3>Обслуживание по договору</h3>
-          <p>Постоянное сервисное обслуживание для юридических лиц и организаций. Индивидуальные условия и отчетные документы.</p>
-        </div>
+  <main>
+    <section class="main-intro" style="margin-top:35px;">
+      <h1>Наши услуги</h1>
+      <p class="main-subtitle" style="margin-bottom:24px;">Полный спектр работ по откачке и прочистке канализации, диагностике и обслуживанию сетей.</p>
+    </section>
+
+    <section class="service-list">
+      <div class="service-item">
+        <h3>Аварийная прочистка канализации</h3>
+        <p>Быстрая и эффективная помощь при любых засорах. Используем механическую и гидродинамическую прочистку труб.</p>
       </div>
-      <a href="contacts.html#form" class="cta">Оставить заявку</a>
+      <div class="service-item">
+        <h3>Гидродинамическая прочистка</h3>
+        <img src="photo_2025-05-31_22-06-29.jpg" alt="Схема гидродинамической прочистки" class="method-img">
+        <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект. <br>
+        <small>Преимущество метода — полностью очищает внутреннюю поверхность трубопровода, снижает риск повторных засоров.</small></p>
+      </div>
+      <div class="service-item">
+        <h3>Механическая прочистка</h3>
+        <img src="photo_2025-05-31_22-06-32.jpg" alt="Труба до и после прочистки" class="method-img">
+        <p>Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и "застарелых" пробках.</p>
+      </div>
+      <div class="service-item">
+        <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
+        <img src="photo_2025-05-31_22-06-25.jpg" alt="Оборудование для откачки" class="method-img">
+        <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.</p>
+      </div>
+      <div class="service-item">
+        <h3>Видеоинспекция канализации</h3>
+        <p>Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии. После диагностики даём полный отчёт.</p>
+      </div>
+      <div class="service-item">
+        <h3>Поиск потерянных и скрытых колодцев</h3>
+        <p>Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.</p>
+      </div>
+      <div class="service-item">
+        <h3>Обслуживание организаций по договору</h3>
+        <p>Регулярное сервисное обслуживание предприятий и юридических лиц. Официальные договора, вся документация, гарантия и отчётность.</p>
+      </div>
+    </section>
+
+    <div style="text-align:center; margin:38px 0 20px 0;">
+      <a href="contacts.html" class="cta">Оставить заявку</a>
     </div>
-  </section>
+  </main>
 
   <footer>
     <div class="container">
-      <div class="footer-flex">
-        <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
-      </div>
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
 </body>
