--- a/contacts.html
+++ b/contacts.html
@@ -3,40 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <title>Контакты — Золотарь 58</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
-    <div class="container header-row">
+    <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" alt="Логотип Золотарь 58" class="logo">
-        <span class="brand-name">Золотарь 58</span>
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav>
+      <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
-        <a href="contacts.html">Контакты</a>
+        <a href="contacts.html" style="color:#2478e2; font-weight:700;">Контакты</a>
       </nav>
     </div>
   </header>
 
-  <section class="main">
-    <div class="container">
+  <main>
+    <section class="main-intro" style="margin-top:35px;">
       <h1>Контакты</h1>
+      <p class="main-subtitle" style="margin-bottom:18px;">Свяжитесь с нами любым удобным способом — работаем 24/7!</p>
+    </section>
+    <section class="contacts-block">
       <div class="contacts-flex">
-        <div>
+        <div class="contacts-details">
           <b>Телефон:</b><br>
-          <a href="tel:+79022073636">+7 (902) 207-36-36</a><br>
+          <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a><br><br>
           <b>Email:</b><br>
-          <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a><br>
+          <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a><br><br>
           <b>Время работы:</b><br>
-          Круглосуточно, без выходных<br>
+          Круглосуточно, без выходных<br><br>
           <b>Адрес:</b><br>
-          Пенза и область
+          Пенза, ул. Строителей, 21<br>
         </div>
-        <div>
-          <h3 id="form">Оставить заявку</h3>
+        <div class="contacts-form">
+          <h3 style="margin-top:0;">Оставить заявку</h3>
           <form action="mailto:zolotar85@list.ru" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Ваше имя" required>
             <input type="tel" name="phone" placeholder="Телефон для связи" required>
@@ -45,18 +49,15 @@
           </form>
         </div>
       </div>
-      <div class="map">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afc377fcaa8ed70df5ed7b013bb62c88d347da5c1c24d2c03e865a64bcdbd0911&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
+      <div class="map-block">
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.027526%2C53.193810&z=17&mode=whatshere&whatshere%5Bpoint%5D=45.027526%2C53.193810&whatshere%5Bzoom%5D=17" width="100%" height="260" frameborder="0" allowfullscreen="true" style="border-radius:14px; margin-top:25px;"></iframe>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <div class="container">
-      <div class="footer-flex">
-        <span>© 2025 Золотарь 58 — ИП Зоткин А.И.</span>
-        <span><a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a></span>
-      </div>
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
 </body>
