--- a/services.html
+++ b/services.html
@@ -31,34 +31,37 @@
     <section class="service-list">
       <div class="service-item">
         <h3>Аварийная прочистка канализации</h3>
+        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="method-img">
         <p>Быстрая и эффективная помощь при любых засорах. Используем механическую и гидродинамическую прочистку труб.</p>
       </div>
       <div class="service-item">
         <h3>Гидродинамическая прочистка</h3>
-        <img src="photo_2025-05-31_22-06-29.jpg" alt="Схема гидродинамической прочистки" class="method-img">
-        <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект. <br>
-        <small>Преимущество метода — полностью очищает внутреннюю поверхность трубопровода, снижает риск повторных засоров.</small></p>
+        <img src="hydrodynamic.jpg" alt="Гидродинамическая прочистка" class="method-img">
+        <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.</p>
       </div>
       <div class="service-item">
         <h3>Механическая прочистка</h3>
-        <img src="photo_2025-05-31_22-06-32.jpg" alt="Труба до и после прочистки" class="method-img">
+        <img src="mechanical.jpg" alt="Механическая прочистка" class="method-img">
         <p>Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и "застарелых" пробках.</p>
       </div>
       <div class="service-item">
         <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
-        <img src="photo_2025-05-31_22-06-25.jpg" alt="Оборудование для откачки" class="method-img">
+        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="method-img">
         <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.</p>
       </div>
       <div class="service-item">
         <h3>Видеоинспекция канализации</h3>
+        <img src="video.jpg" alt="Видеоинспекция канализации" class="method-img">
         <p>Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии. После диагностики даём полный отчёт.</p>
       </div>
       <div class="service-item">
-        <h3>Поиск потерянных и скрытых колодцев</h3>
+        <h3>Поиск скрытых колодцев</h3>
+        <img src="search.jpg" alt="Поиск скрытых колодцев" class="method-img">
         <p>Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.</p>
       </div>
       <div class="service-item">
         <h3>Обслуживание организаций по договору</h3>
+        <img src="service-org.jpg" alt="Обслуживание организаций по договору" class="method-img">
         <p>Регулярное сервисное обслуживание предприятий и юридических лиц. Официальные договора, вся документация, гарантия и отчётность.</p>
       </div>
     </section>
