--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
       </div>
       <div class="service-item">
         <h3>Гидродинамическая прочистка</h3>
-        <img src="hydrodynamic.jpg" alt="Гидродинамическая прочистка" class="method-img">
+        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="method-img">
         <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.</p>
       </div>
       <div class="service-item">
