--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Ассенизаторские услуги Пенза</title>
+  <title>Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
+  <script src="theme-switcher.js" defer></script>
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
@@ -18,45 +18,29 @@
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
+        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
 
-  <main>
-    <section class="main-intro">
-      <h1>Откачка и прочистка канализации 24/7</h1>
-      <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физ. и юр. лиц.</p>
-      <a class="cta" href="contacts.html">Оставить заявку</a>
-    </section>
+  <section class="main-intro">
+    <h1>Откачка и прочистка канализации 24/7</h1>
+    <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
+    <a class="cta" href="contacts.html">Вызвать специалиста</a>
+  </section>
 
-    <section class="usps">
-      <div><span class="usp-icon">📞</span> Работаем 24/7</div>
-      <div><span class="usp-icon">💧</span> Современное оборудование</div>
-      <div><span class="usp-icon">📄</span> Договоры для юр. лиц</div>
-    </section>
-
-    <section class="gallery">
-      <h2>Примеры работ</h2>
-      <div class="gallery-list">
-        <div class="gallery-item">
-          <img src="example1.jpg" alt="Пример работы 1" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="example2.jpg" alt="Пример работы 2" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="example3.jpg" alt="Пример работы 3" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="example4.jpg" alt="Пример работы 4" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-      </div>
-    </section>
-  </main>
+  <section class="main">
+    <div class="container">
+      <h2>Почему выбирают нас</h2>
+      <ul>
+        <li>Аварийный выезд 24/7</li>
+        <li>Гидродинамическая и механическая прочистка</li>
+        <li>Откачка септиков, ям, биотуалетов, колодцев</li>
+        <li>Видеоинспекция и поиск скрытых колодцев</li>
+        <li>Работаем с юр. и физ. лицами, нал/безнал</li>
+      </ul>
+    </div>
+  </section>
 
   <footer>
     <div class="container">
