--- a/services.html
+++ b/services.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Услуги — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
+  <script src="theme-switcher.js" defer></script>
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
@@ -18,6 +18,7 @@
         <a href="services.html" style="color:#2478e2; font-weight:700;">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="contacts.html">Контакты</a>
+        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
@@ -41,22 +42,22 @@
       </div>
       <div class="service-item">
         <h3>Механическая прочистка</h3>
-        <img src="mechanical.jpg" alt="Механическая прочистка" class="method-img">
-        <p>Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и "застарелых" пробках.</p>
+        <img src="mechanical-cleaning.jpg" alt="Механическая прочистка" class="method-img">
+        <p>Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и \"застарелых\" пробках.</p>
       </div>
       <div class="service-item">
         <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
-        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="method-img">
+        <img src="septic-cleaning.jpg" alt="Откачка ям, септиков, биотуалетов" class="method-img">
         <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.</p>
       </div>
       <div class="service-item">
         <h3>Видеоинспекция канализации</h3>
-        <img src="video.jpg" alt="Видеоинспекция канализации" class="method-img">
+        <img src="video-inspection.jpg" alt="Видеоинспекция канализации" class="method-img">
         <p>Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии. После диагностики даём полный отчёт.</p>
       </div>
       <div class="service-item">
         <h3>Поиск скрытых колодцев</h3>
-        <img src="search.jpg" alt="Поиск скрытых колодцев" class="method-img">
+        <img src="search-well.jpg" alt="Поиск скрытых колодцев" class="method-img">
         <p>Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.</p>
       </div>
       <div class="service-item">
