--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
+  <script src="theme-switcher.js" defer></script>
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
@@ -18,6 +18,7 @@
         <a href="services.html">Услуги</a>
         <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
         <a href="contacts.html">Контакты</a>
+        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
